--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">中云付</string>
+    <string name="app_name">中云付-短运端</string>
     <string name="title_home">主页</string>
     <string name="title_mine">我的</string>
     <string name="title_activity_login">登录</string>
@@ -14,7 +14,7 @@
     <string name="prompt_username">账号</string>
     <string name="prompt_password">密码</string>
     <string name="action_sign_in">登录</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="action_sign_up">注册</string>
     <string name="error_invalid_account">请输入正确的账号</string>
     <string name="error_invalid_phone">请输入正确的手机号</string>
     <string name="error_invalid_password">密码须大于等于6位</string>
@@ -23,6 +23,18 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <string name="text_hint_phone">请输入您的手机号</string>
+    <string name="text_send_code">获取验证码</string>
+    <string name="text_hint_code2">请输入短信验证码</string>
+    <string name="action_sign_in_short">@string/action_sign_in</string>
+    <string name="text_hint_code">验证码</string>
+    <string name="text_register">注册</string>
+    <string name="has_account">已有账号</string>
+    <string name="btn_resend_count">%1$s s后重新获取</string>
+    <string name="toast_input_phone">请正确输入手机号</string>
+    <string name="text_error_mobile_valid">请输入正确的手机号</string>
+    <string name="text_error_sms_code_valid">请输入正确的验证码</string>
     
     <string name="text_unfinished">未完成</string>
     <string name="text_finished">已完成</string>
