--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,6 +123,7 @@
 
     <string name="text_input_vehicle_num">请输入车牌号</string>
     <string name="text_welcome">你好，%1$s</string>
+    <string name="text_error_upload_image">上传图片失败</string>
 
     <array name="array_photo">
         <item>@string/text_photo</item>
