--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,7 @@
     <string name="btn_sum">去结算</string>
 
     <string name="text_scan_pay">扫码支付</string>
+    <string name="text_validate_finish">验收完毕</string>
 
     <string name="text_create_order">创建订单</string>
     <string name="text_giveup_pay">放弃支付</string>
